// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth > Reducer handles create member fulfilled actions 1`] = `
{
  "user": {
    "phone": "1231231234",
    "rspAccount": {
      "caseLoad": 1,
      "email": "leonard.k@example.com",
      "firstName": "Leonard",
      "id": "10b8b8cf-601b-475b-ba0b-a05bc9a3a06i",
      "isProfileFilled": true,
      "lastName": "Krasner",
      "phone": "1231231234",
      "position": "caseManager",
      "role": "member",
      "rsp": {
        "address": "1010 Maple Dr",
        "city": "West Allis",
        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
        "email": "hello@em.com",
        "id": "10b8b8cf-601b-475b-ba0b-a05bc9a3a06h",
        "justiceStatus": [
          "freeWorld",
          "halfwayHouse",
        ],
        "name": "Employ Milwaukee",
        "offenses": [
          "possession",
          "burglary",
        ],
        "phone": "3101231234",
        "postalCode": "53227",
        "servicesArea": [
          "County Name",
        ],
        "state": "WI",
        "support": [
          "employment",
        ],
        "veteranOrJustice": [
          "justiceImpacted",
        ],
      },
      "rspId": "10b8b8cf-601b-475b-ba0b-a05bc9a3a06h",
      "userId": "10b8b8cf-601b-475b-ba0b-a05bc9a3a06i",
    },
  },
}
`;

exports[`Auth > Reducer handles create rsp fulfilled actions 1`] = `
{
  "user": {
    "avatar": undefined,
    "phone": "1231231234",
    "rspAccount": {
      "caseLoad": 1,
      "email": "leonard.k@example.com",
      "firstName": "Leonard",
      "id": "10b8b8cf-601b-475b-ba0b-a05bc9a3a06i",
      "isProfileFilled": true,
      "lastName": "Krasner",
      "phone": "1231231234",
      "position": "caseManager",
      "role": "owner",
      "rsp": {
        "address": "1010 Maple Dr",
        "city": "West Allis",
        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
        "email": "hello@em.com",
        "id": "10b8b8cf-601b-475b-ba0b-a05bc9a3a06h",
        "justiceStatus": [
          "freeWorld",
          "halfwayHouse",
        ],
        "name": "Employ Milwaukee",
        "offenses": [
          "possession",
          "burglary",
        ],
        "phone": "3101231234",
        "postalCode": "53227",
        "servicesArea": [
          "County Name",
        ],
        "state": "WI",
        "support": [
          "employment",
        ],
        "veteranOrJustice": [
          "justiceImpacted",
        ],
      },
      "rspId": "10b8b8cf-601b-475b-ba0b-a05bc9a3a06h",
      "userId": "10b8b8cf-601b-475b-ba0b-a05bc9a3a06i",
    },
  },
}
`;

exports[`Auth > Reducer handles fetchUser fulfilled actions 1`] = `
{
  "user": {
    "client": {
      "address": "111 Street",
      "age": "16-24",
      "city": "Los Angeles",
      "disability": false,
      "education": [],
      "email": "test@example.com",
      "ethnicity": "eastAsian",
      "experience": [],
      "firstName": "Test",
      "gender": "female",
      "id": "10b8b8cf-601b-475b-ba0b-a05bc9a3a06c",
      "justiceStatus": "freeWorld",
      "languages": [],
      "lastName": "User",
      "license": [],
      "maritalStatus": "single",
      "offense": [
        "arson",
      ],
      "orientation": "heterosexual",
      "personalStrengths": [],
      "personalSummary": "personal summary",
      "postalCode": "90887",
      "referredBy": "familyFriends",
      "relativeExperience": [],
      "releasedAt": "releasedAt01",
      "religion": "christianity",
      "sbn": false,
      "sexualOffenderRegistry": false,
      "state": "CA",
      "stateOrFederal": "federal",
      "support": [
        "resume",
      ],
      "timeServed": "timeServed01",
      "updatedAt": 2023-01-01T00:00:00.000Z,
      "veteranOrJustice": [
        "justiceImpacted",
      ],
      "veteranStatus": "notVeteran",
    },
    "createdAt": "2020-01-01T00:00:00.000Z",
    "email": "test@example.com",
    "firstName": "Test",
    "id": "10b8b8cf-601b-475b-ba0b-a05bc9a3a06f",
    "lastName": "User",
    "type": "client",
    "updatedAt": "2020-01-01T00:00:00.000Z",
  },
}
`;

exports[`Auth > Reducer handles logout fulfilled actions 1`] = `
{
  "user": null,
}
`;

exports[`Auth > Reducer handles updateUser fulfilled actions 1`] = `
{
  "user": {
    "client": {
      "address": "111 Street",
      "age": "16-24",
      "city": "Los Angeles",
      "disability": false,
      "education": [],
      "email": "test@example.com",
      "ethnicity": "eastAsian",
      "experience": [],
      "firstName": "Test",
      "gender": "female",
      "id": "10b8b8cf-601b-475b-ba0b-a05bc9a3a06c",
      "justiceStatus": "freeWorld",
      "languages": [],
      "lastName": "User",
      "license": [],
      "maritalStatus": "single",
      "offense": [
        "arson",
      ],
      "orientation": "heterosexual",
      "personalStrengths": [],
      "personalSummary": "personal summary",
      "postalCode": "90887",
      "referredBy": "familyFriends",
      "relativeExperience": [],
      "releasedAt": "releasedAt01",
      "religion": "christianity",
      "sbn": false,
      "sexualOffenderRegistry": false,
      "state": "CA",
      "stateOrFederal": "federal",
      "support": [
        "resume",
      ],
      "timeServed": "timeServed01",
      "updatedAt": 2023-01-01T00:00:00.000Z,
      "veteranOrJustice": [
        "justiceImpacted",
      ],
      "veteranStatus": "notVeteran",
    },
    "createdAt": "2020-01-01T00:00:00.000Z",
    "email": "test@example.com",
    "firstName": "Updated",
    "id": "10b8b8cf-601b-475b-ba0b-a05bc9a3a06f",
    "lastName": "User",
    "type": "client",
    "updatedAt": "2020-01-01T00:00:00.000Z",
  },
}
`;

exports[`Auth > Reducer returns empty initial state 1`] = `
{
  "user": null,
}
`;
